# Sentinel_Guard

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: input_examples.json  output_examples.json  run.py
configs/: example_config.yaml
examples/: 01_basic_usage.ipynb  02_owasp_security.ipynb  03_pii_detection.ipynb  04_adversarial_detection.ipynb  adversarial_detection.py  basic_usage.py  embedding_guardrails.py  pii_detection.py
sentinelguard/: __init__.py  owasp.py
sentinelguard/adversarial/: __init__.py
sentinelguard/api/: __init__.py  server.py
sentinelguard/cli/: __init__.py
sentinelguard/core/: __init__.py  config.py  guard.py  pipeline.py  scanner.py
sentinelguard/embeddings/: __init__.py
sentinelguard/gateway/: __init__.py  config.py  providers.py  server.py
sentinelguard/pii/: __init__.py
sentinelguard/scanners/: __init__.py
sentinelguard/scanners/output/: __init__.py  bias.py  data_leakage.py  deanonymize.py  excessive_agency.py  factual_consistency.py  json_scanner.py  language_same.py  malicious_urls.py  misinformation.py  no_refusal.py  output_sanitization.py  reading_time.py  relevance.py  sensitive.py  system_prompt_leakage.py  url_reachability.py  vector_weakness.py
sentinelguard/scanners/prompt/: __init__.py  anonymize.py  ban_code.py  ban_competitors.py  ban_substrings.py  ban_topics.py  code.py  data_poisoning.py  gibberish.py  invisible_text.py  jailbreak.py  language.py  pii.py  prompt_injection.py  regex.py  secrets.py  sentiment.py  supply_chain.py  token_limit.py  toxicity.py  unbounded_consumption.py
tests/: conftest.py  test_adversarial.py  test_code_analyzer.py  test_core.py  test_embeddings.py  test_gateway.py  test_output_scanners.py  test_owasp_scanners.py  test_pii.py  test_prompt_scanners.py
